@@ -50,6 +50,7 @@
 
 // INCLUDES
 
+#include <pkgconf/system.h>
 #include <stdlib.h>
 #include <ctype.h>
 #include <cyg/infra/testcase.h>
@@ -57,8 +58,12 @@
 
 // FUNCTIONS
 
+#ifndef CYGPKG_LIBC_STARTUP
+void cyg_user_start(void)
+#else
 int
 main( int argc, char *argv[] )
+#endif
 {
     int c; // character we use as a parameter
 
